mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICENAME-mysql
  namespace: NS_Name
  labels:
    app: SERVICENAME
spec:
  selector:
    app: SERVICENAME
    tier: mysql
  ports:
    - port: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SERVICENAME-mysql
  namespace: NS_Name
  labels:
    app: SERVICENAME
spec:
  selector:
    matchLabels:
      app: SERVICENAME
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: SERVICENAME
        tier: mysql
    spec:
      containers:
      - image: artifactory.spng.ir/docker/mysql:5.6
        name: mysql
        securityContext:
          runAsUser: 2015
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: SERVICENAME-mysql-persistent-storage
          mountPath: /var/lib/mysql
          readOnly: false
      volumes:
      - name: SERVICENAME-mysql-persistent-storage
        persistentVolumeClaim:
          claimName: SERVICENAME-mysql-pv-claim
