deployments_prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICENAME
  namespace: NS_Name
spec:
  selector:
    app: SERVICENAME
  ports:
    - port: 9600
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
  name: SERVICENAME-ingress
  namespace: NS_Name
spec:
  rules:
    - host: SERVICENAME.exapmle.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
          - backend:
              service:
                name: SERVICENAME
                port:
                  number: 9600
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SERVICENAME
  namespace: NS_Name
  labels:
    app: SERVICENAME
spec:
  selector:
    matchLabels:
      app: SERVICENAME
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: SERVICENAME
    spec:
      containers:
        - image: Localrepo_URL/docker/NS_Name/SERVICENAME:0.0.1-SNAPSHOT
          name: SERVICENAME
          imagePullPolicy: Always
          ports:
            - containerPort: 9600
              name: SERVICENAME
