deployments_stage.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICENAME
  namespace: NS_Name
spec:
  selector:
    app: SERVICENAME
  ports:
    - port: 9600
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: SERVICENAME-ingress
  namespace: NS_Name
spec:
  rules:
    - host: NS_Name.exapmle.com
      http:
        paths:
          - backend:
              serviceName: SERVICENAME
              servicePort: 9600
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SERVICENAME
  namespace: NS_Name
  labels:
    app: SERVICENAME
spec:
  selector:
    matchLabels:
      app: SERVICENAME
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: SERVICENAME
    spec:
      containers:
        - image: Localrepo_URL/docker/NS_Name/SERVICENAME:0.0.1-SNAPSHOT
          name: SERVICENAME
          ports:
            - containerPort: 9600
              name: SERVICENAME
